Appsettings changes and Backup and restore commands

--- a/Administration/Administration.API/appsettings.json
+++ b/Administration/Administration.API/appsettings.json
@@ -8,11 +8,11 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "AdministrationConnection": "server=localhost;port=3306;database=Administration;user=root;password=Vofox@12345"
+    "AdministrationConnection": "server=localhost;port=3306;database=administration;user=root;password=Admin123"
   },
 
   "FileStorage": {
-    "PhotoPath": "D:/Test/JamathTool/Contributors Photos"
+    "PhotoPath": ""
   }
 
 }
